# SocialNetworkMining-RumorDetection

./: .gitignore  .mailmap  README.md  pyproject.toml  report-v1.md
.github/workflows/: ci.yml
report/: report-v2.md  report.md
src/data/: BertManager.py  __init__.py  bert_dataset.py  data_loader.py  feature_engineer.py  gcn_dataset.py  llm_dataset.py
src/experiments/: __init__.py  analyze_token_lengths.py  count_avg_nodes.py  rng_visualization.py
src/models/: bert_classifier.py  gnn_classifier.py  llm_classifier.py
src/prompts/: __init__.py  rumor_detection_prompt.py
src/trainers/: analyze_feature_importance.py  train_bert_baseline.py  train_gcn.py  train_llm_gemini.py  train_logistics.py  train_random_forest.py  train_xgboost.py
src/utils/: __init__.py  create_mock_data.py  cross_validation.py  evaluation.py  llm_cross_validation.py
src/visual/: visual_daily_distribution.py  visual_interval.py  visual_propagation.py  visual_timeline.py
tests/: test_evaluation.py
visualization/: visual_daily_distribution.py  visual_interval.py  visual_propagation.py  visual_root_hour.py  visual_timeline.py  visual_wordcloud.py
