[project]
name = "social-network-mining-rumor-detection"
version = "0.1.0"
description = "Rumor detection project using ML, BERT, GCN, and LLM approaches."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy==2.2.6",
    "pandas==2.3.3",
    "scikit-learn==1.6.1",
    "transformers==4.57.3",
    "xgboost==3.1.2",
    "matplotlib",
    "tqdm",
    "networkx",
    "google-genai",
    # PyTorch is included here to ensure basic compatibility, but users 
    # should ensure they have the correct CUDA version installed.
    # We pin it to the teammate's version to ensure compatibility.
    "torch==2.8.0",
    "torchvision==0.15.2", 
]

[tool.uv]
# We explicitly exclude PyG dependencies to avoid "Matrix of Doom" issues.
# Users must install torch-geometric and its dependencies manually 
# based on their specific hardware (CUDA) configuration.
